lab_artifacts/k3s-argocd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host('argocd.example.tld')
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host('argocd.example.tld') && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
#  tls:
#    certResolver: default
